2006-01-22  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.diff:  Patch to fix c99 compiling.  Patch by
	  Jens Granseuer <jensgr@gmx.net>.  Fixes bug #399486.

2006-01-21  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.17.6:
        * configure.ac: Update to new release version.
        * NEWS: Updated.

2007-01-21  Lukasz Zalewski  <lukas@dcs.qmul.ac.uk>

	Fix for bug #352263
	* gui/gdmsetup.c: Created more verbose warnings when defaults.conf or
	  custom.conf are missing before terminating. Also all the error
	  messages are displayed using dialogs rather than stdout. This is
	  especially useful when gdmsetup is run from within login mamaner as
	  it doesn't leave users wondering why it didnt start-up. Also check if
	  gdm daemon is running is made before check for config files. In such
	  setup appropriate message is displayed rather than config file not
	  found.
	* daemon/gdmconfig.c: Daemon will not start if main configuration file
	  (defaults.conf) is missing
	* daemon/slave.c: gdmsetup will not be launched if coustom.conf config
	  file is missing
	
2006-01-22  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.desktop.in.in: Remove GenericName since the 
	  value is redundant with the Name value.  Fixes bug #395790.

2006-01-08  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.c: Fixes so code will compile with c99
	  compilers.  Fixes bug #394421.  Patch provided by
	  Jens Granseuer <jensgr@gmx.net>.

2006-01-07  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.17.5:
        * configure.ac: Update to new release version.
        * NEWS: Updated.

2006-01-07  Brian Cameron  <Brian.Cameron@sun.com>

	* gui/gdmchooser.glade, gui/gdmsetup.glade:  No longer hardcode
	  invisible_char property in glade files, instead rely on GTK+
	  default.  Patch by Vitaliy Ischenko <betalb@gmail.com>.  Fixes
	  bug #393904.

2006-01-07  Brian Cameron  <Brian.Cameron@sun.com>
